--- a/style.css
+++ b/style.css
@@ -156,3 +156,18 @@ footer h3 {
     color: white;
 
 }
+
+.subscribe {
+    box-sizing: border-box;
+    background-color: rgb(252, 229, 182);
+    width: 50%;
+    margin-left: 25%;
+    margin-right: 1%;
+    margin-top: 10px;
+    margin-bottom: 2%;
+    padding-left: 3px;
+    padding-bottom: 60px;
+    border-radius: 2px;
+    align-items: center;
+    padding-top: 3%;
+}
